# Workshop3-Farmlands-DataScience-QA

./: .gitignore  README.md  main.py  pyproject.toml  workshop3-guide.md
data/raw/: farm_details.csv  farm_supply_data.csv  weather_data.csv
src/farmlands_analytics/: __init__.py
src/farmlands_analytics/data_cleaning/: __init__.py  cleaner.py
src/farmlands_analytics/data_exploration/: __init__.py  explorer.py
src/farmlands_analytics/modeling/: __init__.py  predictor.py
src/farmlands_analytics/utils/: __init__.py
tests/integration/: test_end_to_end_pipeline.py
tests/unit/: test_data_cleaning.py  test_data_exploration.py  test_missing_value_handler.py
