[project]
name = "farmlands-analytics-workshop"
version = "0.1.0"
description = "Hands-on data science workshop for Farmlands Co-operative - featuring AI-assisted development with Cursor"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Farmlands Data Science Team", email = "datascience@farmlands.co.nz"}
]
license = {text = "MIT"}
keywords = ["data-science", "agriculture", "machine-learning", "farmlands", "cursor", "ai-development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.23.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "openpyxl>=3.1.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "pre-commit>=3.3.0",
]
ml-advanced = [
    "xgboost>=1.7.0",
    "lightgbm>=3.3.0",
    "prophet>=1.1.0",
    "statsmodels>=0.14.0",
    "scipy>=1.10.0",
]
viz-advanced = [
    "dash>=2.10.0",
    "streamlit>=1.24.0",
    "bokeh>=3.2.0",
    "altair>=5.0.0",
]
geo = [
    "geopandas>=0.13.0",
    "folium>=0.14.0",
    "shapely>=2.0.0",
]
